XO_Project_UAT/Project--XOGrp--UAT/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Available_as_Local_Lead_Source__c</fullName>
        <formula>IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available as Local Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Sub_Type__c</fullName>
        <globalPicklist>Lead_Sub_Source</globalPicklist>
        <label>Campaign Sub Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delay_time_03__c</fullName>
        <formula>(NOW()-0.036)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delay time 03</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dynamics_Campaign_ID__c</fullName>
        <description>SF-1492; added for data migration purposes.</description>
        <externalId>true</externalId>
        <label>Dynamics Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Introduction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introductory_Verbiage_Formula__c</fullName>
        <formula>IF(and(Introduction__c&lt;&gt;&apos;&apos;, Required_Immediate_Action__c=True), Introduction__c&amp;&apos; &apos;&amp;&apos;This is an extremely hot prospect that you are expected to call within 1 hour of receiving this email during business hours.&apos;,
IF(and(Introduction__c=&apos;&apos;,Required_Immediate_Action__c=True), &apos;This is an extremely hot prospect that you are expected to call within 1 hour of receiving this email during business hours.&apos;, Introduction__c))</formula>
        <label>Introductory Verbiage Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Sales_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Sales Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>CAMP-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Required_Immediate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Immediate Action</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>